duicontrolpanel (0.9.8~unreleased) unstable; urgency=low

  * new version

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 03 Dec 2010 16:51:01 +0100

duicontrolpanel (0.9.7) unstable; urgency=low

  * Fixes: NB#203963 - duicontrolpanel calls MTheme::loadCSS()
  * Added new interface for creating stylable applets
  * Fixes: NB#208452 - Category view is still down the page on reopening
    it
  * Fixes: NB#206199 - Controlpanel constructs the brief, even if not
    needed

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 01 Dec 2010 11:43:09 +0100

duicontrolpanel (0.9.6) unstable; urgency=low

  * Changes: adds DBus method "appletName (QStringList)" so that search
    becomes able to pop up the applets
  * Changes: adds credential for devicelock::DeviceLockControl
  * Changes: Added parameter "-nobriefs" which disables using dynamic
    value lines on applet icons
  * Fixes: NB#208104 - Reset and clear device buttons are not seen in
    settings main view

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 29 Nov 2010 16:09:11 +0100

duicontrolpanel (0.9.5) unstable; urgency=low

  [ Robert Manner ]
  * Fixes lintian errors
  * Restores protection for segfaulting briefs: helper process gets
    restarted and does not try to reload the bad applet
  * Fixes: background theme id

  [ Sandor Pinter ]
  * Fixing layout, change logical ids
  * Fixes: NB#205767

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Fri, 19 Nov 2010 13:51:52 +0100

duicontrolpanel (0.9.4) unstable; urgency=low

  * Changes: new type of briefview: special
  * Changes: a logical MainPage category to add applet icons to the
    mainpage
  * Changes: by default disables skipping the category page if it has
    one applet in the list only

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 10 Nov 2010 16:58:22 +0100

duicontrolpanel (0.9.3.1) unstable; urgency=low

  * Reverts adding a title on applet pages

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 10 Nov 2010 11:30:41 +0100
